/**
 *  Update API
 */

syntax = "proto3";

package peloton.api.v0.update;

option go_package = "peloton/api/v0/update";
option java_package = "peloton.api.v0.update";

import "peloton/api/v0/peloton.proto";

/**
 *  Update options for a job update
 */
message UpdateConfig {
  // Update batch size of the deployment
  uint32 batchSize = 1;

  // Update batch percentage of the deployment. If present,
  // will take precedence over batchSize
  double batchPercentage = 2;

  // Whether or not to stop all instance before update
  bool stopBeforeUpdate = 3;

  // startPaused indicates if the update should start in the paused state,
  // requiring an explicit resume to initiate.
  bool startPaused = 4;

  // rollbackOnFailure indicates if the update should be rolled back
  // automatically if failure is detected
  bool rollbackOnFailure = 5;
}

// Runtime state of a job update
enum State {
  // Invalid protobuf value
  INVALID = 0;

  // The update has been created but not started yet
  INITIALIZED = 1;

  // The update is rolling forward
  ROLLING_FORWARD = 2;

  // The update has been paused
  PAUSED = 3;

  // The update has completed successfully
  SUCCEEDED = 4;

  // The update was aborted/cancelled
  ABORTED = 5;
}

/**
 *  UpdateStatus provides current runtime status of an update
 */
message UpdateStatus {
  // Number of tasks that have been updated
  uint32 numTasksDone = 1;

  // Number of tasks to be updated
  uint32 numTasksRemaining = 2;

  // Runtime state of the update
  State state = 3;
}

/**
 * Information of an update, such as update config and runtime status
 */
message UpdateInfo {
  // Update ID of the job update
  peloton.UpdateID updateId = 1;

  // Update configuration
  UpdateConfig config = 2;

  // Update runtime status
  UpdateStatus status = 3;

  // Job ID of the job update
  peloton.JobID jobId = 4;

  // Configuration version of the job after this update
  uint64 configVersion = 5;

  // Job configuration version before the update
  uint64 prevConfigVersion = 6;
}
